--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<div id="header-menu">
 					<ol>
-						<li><a href="Raindery.github.io/index.html">Главная</a></li>
+						<li><a href="/">Главная</a></li>
 						<li><a href="html/about.html">Об автошколе</a></li>
 						<li><a href="html/cost-study-page.html">Стоимость обучения</a></li>
 						<li><a href="html/contact-page.html">Контакты</a></li>
@@ -172,7 +172,7 @@
 			</div>
 			<div id="footer-menu">
 				<ol>
-					<li><a href="Raindery.github.io/index.html">Главная</a></li>
+					<li><a href="/">Главная</a></li>
 					<li><a href="html/about.html">Об автошколе</a></li>
 					<li><a href="html/cost-study-page.html">Стоимость обучения</a></li>
 					<li><a href="html/contact-page.html">Контакты</a></li>
