--- a/html/comment.html
+++ b/html/comment.html
@@ -28,7 +28,7 @@
 
 				<div id="header-menu">
 					<ol>
-						<li><a href="index.html">Главная</a></li>
+						<li><a href="../index.html">Главная</a></li>
 						<li><a href="about.html">Об автошколе</a></li>
 						<li><a href="cost-study-page.html">Стоимость обучения</a></li>
 						<li><a href="contact-page.html">Контакты</a></li>
@@ -109,7 +109,7 @@
 			</div>
 			<div id="footer-menu">
 				<ol>
-					<li><a href="index.html">Главная</a></li>
+					<li><a href="../index.html">Главная</a></li>
 					<li><a href="about.html">Об автошколе</a></li>
 					<li><a href="cost-study-page.html">Стоимость обучения</a></li>
 					<li><a href="contact-page.html">Контакты</a></li>
