--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header id="header-container">
 			<div id="header">
 				<div class="logo">
-					
+					<a href="index.html"></a>
 				</div>
 
 				<div id="header-menu">
@@ -79,7 +79,7 @@
 						<p>Хватит мечтать!</p>
 						<p>Пора становиться настоящим<wbr><br>водителем!<p>
 					</div>
-					<div class="request-button">Оставить заявку</div>
+					<div class="request-button"><a href="html/contact-page.html#form-and-map">Оставить заявку</a></div>
 				</div>
 			</div>
 
@@ -189,7 +189,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button">Оставить заявку</div>
+				<div class="request-button"><a href="html/contact-page.html#form-and-map">Оставить заявку</a></div>
 			</div>
 		</div>
 	</footer>
