--- a/html/comment.html
+++ b/html/comment.html
@@ -23,7 +23,7 @@
 		<header id="header-container">
 			<div id="header">
 				<div class="logo">
-					
+					<a href="html/index.html"></a>
 				</div>
 
 				<div id="header-menu">
@@ -126,7 +126,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button">Оставить заявку</div>
+				<div class="request-button"><a href="contact-page.html#form-and-map">Оставить заявку</a></div>
 			</div>
 		</div>
 	</footer>	
