--- a/html/contact-page.html
+++ b/html/contact-page.html
@@ -75,7 +75,7 @@
 
 			<div id="form-and-map">
 				<div id="form">
-					<form method="post" action="../rts/mail.php" class="form-validate">
+					<form method="post" class="form-validate">
 						<div class="field-cont" id="field-name">
 							<div></div>
 							<input type="text" placeholder="Введите Ваше имя"  name="contactName" data-validate>
