--- a/html/autopark.html
+++ b/html/autopark.html
@@ -26,7 +26,7 @@
 		<header id="header-container">
 			<div id="header">
 				<div class="logo">
-					<a href="html/index.html"></a>
+					<a href="../index.html"></a>
 				</div>
 
 				<div id="header-menu">
