--- a/html/contact-page.html
+++ b/html/contact-page.html
@@ -75,7 +75,7 @@
 
 			<div id="form-and-map">
 				<div id="form">
-					<form method="post" class="form-validate">
+					<form method="post" action="../rts/mail.php" class="form-validate">
 						<div class="field-cont" id="field-name">
 							<div></div>
 							<input type="text" placeholder="Введите Ваше имя"  name="contactName" data-validate>
@@ -134,7 +134,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button"><a href="contact-page.html#form-and-map">Оставить заявку</a></div>
+				<div class="request-button" onclick="document.location='contact-page.html#form-and-map'">Оставить заявку</div>
 			</div>
 		</div>
 	</footer>
