--- a/html/cost-study-page.html
+++ b/html/cost-study-page.html
@@ -69,7 +69,7 @@
 					</p>
 					<hr>
 					<h3>18 500 Р</h3>
-					<div class="request-button"><a href="contact-page.html#form-and-map&type=1">Записаться</a></div>
+					<div class="request-button" onclick="document.location='contact-page.html#form-and-map&type=2'">Записаться</div>
 				</div>
 				
 				<div class="card">
@@ -84,7 +84,7 @@
 					</p>
 					<hr>
 					<h3>17 500 Р</h3>
-					<div class="request-button"><a href="contact-page.html#form-and-map&type=2">Записаться</a></div>
+					<div class="request-button" onclick="document.location='contact-page.html#form-and-map&type=2'">Записаться</div>
 				</div>
 			</div>
 			
@@ -124,7 +124,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button"><a href="contact-page.html#form-and-map">Оставить заявку</a></div>
+				<div class="request-button" onclick="document.location='contact-page.html#form-and-map'">Оставить заявку</div>
 			</div>
 		</div>
 	</footer>	
