--- a/html/study.html
+++ b/html/study.html
@@ -94,7 +94,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button"><a href="contact-page.html#form-and-map">Оставить заявку</a></div>
+				<div class="request-button" onclick="document.location='contact-page.html#form-and-map'">Оставить заявку</div>
 			</div>
 		</div>
 	</footer>	
