--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<p>Хватит мечтать!</p>
 						<p>Пора становиться настоящим<wbr><br>водителем!<p>
 					</div>
-					<div class="request-button"><a href="html/contact-page.html#form-and-map">Оставить заявку</a></div>
+					<div class="request-button" onclick="document.location='html/contact-page.html#form-and-map'">Оставить заявку</div>
 				</div>
 			</div>
 
@@ -189,7 +189,7 @@
 					<div></div>
 					<p>8 (800) 535 35 35</p>
 				</div>					
-				<div class="request-button"><a href="html/contact-page.html#form-and-map">Оставить заявку</a></div>
+				<div class="request-button" onclick="document.location='html/contact-page.html#form-and-map'">Оставить заявку</div>
 			</div>
 		</div>
 	</footer>
